RESOLVED FIXED198088
Web Inspector: Overlay: rulers/guides should be shown whenever element selection is enabled
https://bugs.webkit.org/show_bug.cgi?id=198088
Summary Web Inspector: Overlay: rulers/guides should be shown whenever element select...
Devin Rousso
Reported 2019-05-21 15:10:32 PDT
This would be especially useful when element selection is started from the develop menu (⇧⌘C), instead of from the Web Inspector UI.
Attachments
Patch (5.33 KB, patch)
2019-05-22 22:36 PDT, Devin Rousso
no flags
Patch (18.61 KB, patch)
2019-05-23 17:52 PDT, Devin Rousso
no flags
Patch (18.73 KB, patch)
2019-05-23 18:06 PDT, Devin Rousso
no flags
Devin Rousso
Comment 1 2019-05-22 22:36:56 PDT
Timothy Hatcher
Comment 2 2019-05-23 10:45:14 PDT
I'm on the fence about this. If a developer hates rulers, they would be turned off by this. Maybe a setting in in order for this behavior?
Devin Rousso
Comment 3 2019-05-23 17:52:25 PDT
Created attachment 370535 [details] Patch Added a setting that is enabled by default :)
Devin Rousso
Comment 4 2019-05-23 18:06:20 PDT
Created attachment 370536 [details] Patch Rebase
EWS Watchlist
Comment 5 2019-05-23 18:08:30 PDT
This patch modifies the inspector protocol. Please ensure that any frontend changes appropriately use feature checks for new protocol features.
WebKit Commit Bot
Comment 6 2019-05-23 18:34:38 PDT
Comment on attachment 370536 [details] Patch Clearing flags on attachment: 370536 Committed r245730: <https://trac.webkit.org/changeset/245730>
WebKit Commit Bot
Comment 7 2019-05-23 18:34:40 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2019-05-23 18:37:38 PDT
Note You need to log in before you can comment on or make changes to this bug.